MilestoneRFA_CM01/src/objects/Milestone_History__c.object
<CustomObject>
    <fields>
        <fullName>Issues_For_Escalation_Recovery_plan__c</fullName>
        <label>Issues For Escalation / Recovery plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Events_From_Next_Week__c</fullName>
        <label>Key Events From Next Week</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Events_From_This_Week__c</fullName>
        <label>Key Events From This Week</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Sub_Function__c</fullName>
        <label>Sub Function</label>
        <picklist>
            <picklistValues>
                <fullName>Controller&apos;s Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(VM) Vending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Commercial Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Excellence &amp; Package Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Strategy, Shared Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(EOSH)Environmentand Occupational Safetyand Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning &amp; SC Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Drink Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics_Pr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-corporate Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactuaring (BSC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Team_Member_Discussion__c</fullName>
        <label>Team Member(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>マイルストーン履歴</label>
    <nameField>
        <label>マイルストーン履歴名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>